# gpio

./: .gitignore  .mk  CMakeLists.txt  Makefile
include/gpio/: gpio.hpp
src/: event.cpp  gpio.cpp  read.cpp  write.cpp
